# Snowball

./: README.md  manifest.in  pyproject.toml  setup.py
snowball/: config.py  dbt_operations.py  run_dbt.py  snowball.py  sql_processor.py  test.py
snowball.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
snowball/snowball_versions/snowball_dbt/: .gitignore  profiles.yml
snowball/snowball_versions/snowball_dbt/macros/: column_name_select.sql
snowball/snowball_versions/snowball_dbt/seeds/: column_mapping.csv
snowball/snowball_versions/snowball_dbt/tests/: missing_month_check.sql
snowball/snowball_versions/snowball_spark/: 01_core_nb.ipynb  03_analysis_nb.ipynb  04_report_nb.ipynb  tests_nb.ipynb
snowball/snowball_versions/snowball_sql/tests/: missing_month_check.sql  reconciliation_bridge_balance_test.sql  unique_record.sql
snowball_versions/snowball_dbt/: dbt_project.yml  profiles.yml
snowball_versions/snowball_dbt/macros/: read_csv.sql
snowball_versions/snowball_dbt/macros/dispatch/: sql_macros.sql
snowball_versions/snowball_dbt/models/01_core/: calendar.sql  revenue.sql
snowball_versions/snowball_dbt/models/02_datamart/: dim_calendar.sql  dim_customer.sql  dim_other.sql  dim_product.sql  fact_revenue.sql
snowball_versions/snowball_dbt/models/03_analysis/: customer_product_contract.sql  customer_product_lifecycle_events.sql  monthly_revenue.sql
snowball_versions/snowball_dbt/models/04_report/: rpt_revenue_bridge.sql
snowball_versions/snowball_dbt/tests/: customer_level_granularity.sql  product_level_granularity.sql  unique_record.sql
snowball_versions/snowball_spark/: 02_datamart_nb.ipynb
snowball_versions/snowball_sql/tests/: customer_level_granularity.sql
(+17 files in other folders)
