[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snowball"
version = "1.4.8"
description = "Generate dbt, SQL projects and PySpark notebooks."
readme = "README.md"
authors = [
    { name = "Vishal Verma", email = "vishal.verma@jmangroup.com" }
]
requires-python = ">=3.8"

dependencies = [
    "GitPython>=3.1.0",
    "dbt-core>=1.7.0",
    "sqlfluff>=3.0.0",
    "nbformat>=5.0.0",
    "tqdm>=4.60.0",
    "dbt-snowflake",
    "dbt-databricks",
    "dbt-sqlserver",
    "dbt-fabric"
]

[project.scripts]
snowball = "snowball.snowball:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
